fix vert align top issue. #7734

--- a/openscholar/modules/frontend/os_common/FileEditor/FileEditor.style.css
+++ b/openscholar/modules/frontend/os_common/FileEditor/FileEditor.style.css
@@ -22,6 +22,7 @@ div[file-edit] div.description {
 }
 div[file-edit] div.display_inline {
     margin-top: .5em;
+    vertical-align: top;
 }
 div[ng-include="fileEditAddt"] {
     background: #efefef;
